--- a/llm-test-with-gpu/app/index.html
+++ b/llm-test-with-gpu/app/index.html
@@ -1,119 +1,279 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepSeek Chat</title>
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Prism.js for syntax highlighting -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <!-- Marked.js for Markdown parsing -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@11.1.1/marked.min.js"></script>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        .chat { border: 1px solid #ccc; height: 400px; overflow-y: scroll; padding: 10px; margin-bottom: 10px; }
-        .message { margin: 10px 0; padding: 10px; border-radius: 5px; }
-        .user { background-color: #e3f2fd; text-align: right; }
-        .bot { background-color: #f5f5f5; }
-        .status { background-color: #fff3cd; border: 1px solid #ffeaa7; padding: 10px; margin: 10px 0; border-radius: 5px; }
-        .error { background-color: #f8d7da; border-color: #f5c6cb; color: #721c24; }
-        .loading { background-color: #d1ecf1; border-color: #bee5eb; color: #0c5460; }
-        input[type="text"] { width: 70%; padding: 10px; }
-        button { padding: 10px 20px; margin-left: 10px; }
-        button:disabled { opacity: 0.6; cursor: not-allowed; }
+        .message-content {
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
+        .typing-indicator {
+            display: inline-block;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background-color: #9ca3af;
+            animation: typing 1.4s infinite ease-in-out;
+        }
+        .typing-indicator:nth-child(1) { animation-delay: -0.32s; }
+        .typing-indicator:nth-child(2) { animation-delay: -0.16s; }
+        @keyframes typing {
+            0%, 80%, 100% { transform: scale(0); }
+            40% { transform: scale(1); }
+        }
     </style>
 </head>
-<body>
-    <h1>DeepSeek Chat</h1>
-    <div id="chat" class="chat"></div>
-    <div id="status" class="status" style="display: none;"></div>
-    <input type="text" id="message" placeholder="Ask me anything..." onkeypress="if(event.key==='Enter') sendMessage()">
-    <button id="sendBtn" onclick="sendMessage()">Send</button>
+<body class="bg-gray-100 h-screen flex flex-col">
+    <!-- Header -->
+    <div class="bg-white shadow-sm p-4 flex-shrink-0">
+        <h1 class="text-2xl font-bold text-gray-800 text-center">DeepSeek Chat</h1>
+        <div id="modelInfo" class="text-sm text-gray-600 text-center mt-1"></div>
+        <div id="status" class="hidden mt-2 p-2 rounded-md"></div>
+        <div id="loadingProgress" class="hidden mt-2">
+            <div class="bg-gray-200 rounded-full h-2 mb-2">
+                <div id="progressBar" class="bg-blue-500 h-2 rounded-full transition-all duration-300" style="width: 0%"></div>
+            </div>
+            <div id="loadingStage" class="text-sm text-gray-600 text-center"></div>
+            <div id="loadingDetails" class="text-xs text-gray-500 text-center mt-1"></div>
+        </div>
+    </div>
+
+    <!-- Chat Container -->
+    <div class="flex-1 bg-white mx-2 rounded-lg shadow-sm overflow-y-auto p-4" id="chat">
+        <div class="text-center text-gray-500 mt-20">
+            <p>Start a conversation with the AI assistant</p>
+        </div>
+    </div>
+
+    <!-- Input Area -->
+    <div class="bg-white mx-2 mb-2 shadow-sm p-4 flex-shrink-0">
+        <div class="flex space-x-2">
+            <input
+                type="text"
+                id="message"
+                placeholder="Type your message here..."
+                class="flex-1 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent disabled:opacity-50 disabled:cursor-not-allowed"
+                onkeypress="if(event.key==='Enter') sendMessage()"
+                disabled
+            >
+            <button
+                onclick="sendMessage()"
+                id="sendBtn"
+                class="px-6 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed flex items-center"
+                disabled
+            >
+                <span id="sendText">Send</span>
+                <div id="sendLoader" class="hidden ml-2">
+                    <div class="animate-spin rounded-full h-4 w-4 border-b-2 border-white"></div>
+                </div>
+            </button>
+        </div>
+    </div>
 
     <script>
-        function addMessage(content, isUser) {
+        let modelReady = false;
+        let modelLoading = false;
+        let modelError = false;
+
+        // Configure marked.js
+        marked.setOptions({
+            highlight: function(code, lang) {
+                if (lang && Prism.languages[lang]) {
+                    return Prism.highlight(code, Prism.languages[lang], lang);
+                }
+                return code;
+            },
+            breaks: true,
+            gfm: true
+        });
+
+        // Check model status on page load
+        window.onload = function() {
+            checkModelStatus();
+        };
+
+        function checkModelStatus() {
+            fetch('/status')
+                .then(response => response.json())
+                .then(data => {
+                    modelLoading = data.loading;
+                    modelReady = data.ready;
+                    modelError = data.error;
+
+                    // Update model info
+                    if (data.model_name) {
+                        document.getElementById('modelInfo').textContent = `Model: ${data.model_name}`;
+                    }
+
+                    if (modelLoading) {
+                        showLoadingProgress(data.loading_progress, data.loading_stage, data.loading_details);
+                        setTimeout(checkModelStatus, 1000);
+                    } else if (modelError) {
+                        hideLoadingProgress();
+                        showStatus('Error loading model: ' + data.error, 'error');
+                    } else if (modelReady) {
+                        hideLoadingProgress();
+                        hideStatus();
+                        enableInput();
+                    }
+                })
+                .catch(error => {
+                    console.error('Error checking model status:', error);
+                    hideLoadingProgress();
+                    showStatus('Error connecting to server', 'error');
+                });
+        }
+
+        function addMessage(content, isUser = false) {
             const chat = document.getElementById('chat');
-            const div = document.createElement('div');
-            div.className = 'message ' + (isUser ? 'user' : 'bot');
-            div.textContent = content;
-            chat.appendChild(div);
+
+            // Clear welcome message if it exists
+            const welcomeMsg = chat.querySelector('.text-center');
+            if (welcomeMsg) {
+                welcomeMsg.remove();
+            }
+
+            const messageDiv = document.createElement('div');
+            messageDiv.className = `mb-4 ${isUser ? 'flex justify-end' : 'flex justify-start'}`;
+
+            const bubbleDiv = document.createElement('div');
+            bubbleDiv.className = `px-4 py-3 rounded-lg ${
+                isUser
+                    ? 'bg-blue-500 text-white ml-auto max-w-md'
+                    : 'bg-gray-100 text-gray-800 w-full'
+            }`;
+
+            if (isUser) {
+                bubbleDiv.textContent = content;
+            } else {
+                bubbleDiv.innerHTML = marked.parse(content);
+                // Re-highlight code blocks
+                bubbleDiv.querySelectorAll('pre code').forEach(block => {
+                    Prism.highlightElement(block);
+                });
+            }
+
+            messageDiv.appendChild(bubbleDiv);
+            chat.appendChild(messageDiv);
             chat.scrollTop = chat.scrollHeight;
         }
 
         function showStatus(message, type = 'loading') {
             const status = document.getElementById('status');
             status.textContent = message;
-            status.className = `status ${type}`;
-            status.style.display = 'block';
+            status.className = `mt-2 p-2 rounded-md ${
+                type === 'error' ? 'bg-red-100 text-red-700 border border-red-200' :
+                type === 'loading' ? 'bg-blue-100 text-blue-700 border border-blue-200' :
+                'bg-yellow-100 text-yellow-700 border border-yellow-200'
+            }`;
+            status.classList.remove('hidden');
         }
 
         function hideStatus() {
-            document.getElementById('status').style.display = 'none';
+            document.getElementById('status').classList.add('hidden');
         }
 
-        async function checkStatus() {
-            try {
-                const response = await fetch('/status');
-                const data = await response.json();
+        function showLoadingProgress(progress, stage, details) {
+            const progressDiv = document.getElementById('loadingProgress');
+            const progressBar = document.getElementById('progressBar');
+            const stageDiv = document.getElementById('loadingStage');
+            const detailsDiv = document.getElementById('loadingDetails');
 
-                if (data.loading) {
-                    showStatus('Model is loading, please wait...', 'loading');
-                    document.getElementById('sendBtn').disabled = true;
-                } else if (!data.ready) {
-                    showStatus(`Model error: ${data.error}`, 'error');
-                    document.getElementById('sendBtn').disabled = true;
-                } else {
-                    hideStatus();
-                    document.getElementById('sendBtn').disabled = false;
-                }
-            } catch (error) {
-                showStatus('Cannot connect to server', 'error');
-                document.getElementById('sendBtn').disabled = true;
+            progressDiv.classList.remove('hidden');
+            progressBar.style.width = progress + '%';
+            stageDiv.textContent = stage;
+            detailsDiv.textContent = details;
+        }
+
+        function hideLoadingProgress() {
+            document.getElementById('loadingProgress').classList.add('hidden');
+        }
+
+        function enableInput() {
+            document.getElementById('message').disabled = false;
+            document.getElementById('sendBtn').disabled = false;
+            document.getElementById('message').placeholder = "Type your message here...";
+        }
+
+        function disableInput() {
+            document.getElementById('message').disabled = true;
+            document.getElementById('sendBtn').disabled = true;
+            document.getElementById('message').placeholder = "Model is loading...";
+        }
+
+        function showButtonLoader() {
+            document.getElementById('sendText').classList.add('hidden');
+            document.getElementById('sendLoader').classList.remove('hidden');
+        }
+
+        function hideButtonLoader() {
+            document.getElementById('sendText').classList.remove('hidden');
+            document.getElementById('sendLoader').classList.add('hidden');
+        }
+
+        function sendMessage() {
+            if (!modelReady) {
+                alert('Model is not ready yet. Please wait...');
+                return;
             }
-        }
 
-        async function sendMessage() {
-            const input = document.getElementById('message');
-            const message = input.value.trim();
+            const messageInput = document.getElementById('message');
+            const message = messageInput.value.trim();
+
             if (!message) return;
 
             addMessage(message, true);
-            input.value = '';
-            showStatus('Processing your message...', 'loading');
-            document.getElementById('sendBtn').disabled = true;
+            messageInput.value = '';
 
-            try {
-                // Create AbortController for timeout
-                const controller = new AbortController();
-                const timeoutId = setTimeout(() => controller.abort(), 30000); // 30 second timeout
+            const sendBtn = document.getElementById('sendBtn');
+            sendBtn.disabled = true;
+            showButtonLoader();
 
-                const response = await fetch('/chat', {
-                    method: 'POST',
-                    headers: {'Content-Type': 'application/json'},
-                    body: JSON.stringify({message: message}),
-                    signal: controller.signal
-                });
+            const controller = new AbortController();
+            const timeoutId = setTimeout(() => controller.abort(), 30000);
 
+            fetch('/chat', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ message: message }),
+                signal: controller.signal
+            })
+            .then(response => {
                 clearTimeout(timeoutId);
-
-                if (response.ok) {
-                    const data = await response.json();
-                    addMessage(data.response, false);
-                    hideStatus();
-                } else {
-                    const data = await response.json();
-                    addMessage(`Error: ${data.error}`, false);
-                    showStatus(`Error: ${data.error}`, 'error');
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
                 }
-            } catch (error) {
+                return response.json();
+            })
+            .then(data => {
+                addMessage(data.response, false);
+            })
+            .catch(error => {
+                clearTimeout(timeoutId);
                 if (error.name === 'AbortError') {
-                    addMessage('Error: Request timed out. The model might be too slow or overloaded.', false);
-                    showStatus('Request timed out. Try again later.', 'error');
+                    addMessage('Request timed out. Please try again.', false);
                 } else {
+                    console.error('Error:', error);
                     addMessage('Error: ' + error.message, false);
-                    showStatus('Network error: ' + error.message, 'error');
                 }
-            } finally {
-                document.getElementById('sendBtn').disabled = false;
-            }
+            })
+            .finally(() => {
+                sendBtn.disabled = false;
+                hideButtonLoader();
+            });
         }
-
-        // Check status on page load and every 5 seconds
-        checkStatus();
-        setInterval(checkStatus, 5000);
     </script>
 </body>
 </html>
